third_party/move/move-compiler-v2/tests/more-v1/parser/function_acquires_missing_comma.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_acquires_missing_comma.move:5:25
  │
5 │     fun f() acquires X1 X2 {
  │                         ^^
  │                         │
  │                         Unexpected 'X2'
  │                         Expected '{'
